<resources>
    <string name="app_name">MyHustle</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">ENTER OTP</string>
    <string name="ksh_10000">Ksh 10000</string>
    <string name="total_items_sold">Total Items Sold</string>
    <string name="view_sales">All Sales</string>
    <string name="filter_sales">Search Sales</string>
    <string name="analytics">Analytics</string>
    <string name="sell_items">Sell Items</string>
    <string name="add_item">Add Item</string>
    <string name="remove_btn">Remove This Item</string>
    <string name="otp_success">"Success OTP Verified"</string>
    <string name="select_items_fab">Select Items</string>
    <string name="add_db_record_status">Record Added</string>
    <string name="error_input_issue">Record Not Added</string>
    <string name="error_update_issue">Record Not Updated</string>
    <string name="item_update_status">Record Updated</string>
    <string name="btn_update_item">Update Item</string>
    <string name="enter_your_4_digit_pin_to_use_app">Enter Your 4 Digit Pin to Use App</string>
    <string name="lock_status">Lock Status</string>
    <string name="sales_chart_title">Sales</string>
    <string name="copyright_data">copyright © 2021</string>
    <string name="app_image_description">App Image</string>
    <string name="dashboard">Own your Hustle</string>
    <string name="enter_item_name">Enter Item name</string>
    <string name="enter_activation">Enter Activation Key</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_purchase_price">Enter Purchase Price e.g 2000</string>
    <string name="enter_selling_price">Enter selling price e.g 2400</string>
    <string name="enter_quantity">Enter Quantity E.g 4</string>
    <string name="save_and_add">Save and Add</string>
    <string name="delete_item">Delete Item</string>
    <string name="md_cancel">Back</string>
    <string name="create_password">Create Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone No e.g 0722123456</string>
    <string name="register_me">Register Me</string>
    <string name="register_me_btn">Register Me</string>
    <string name="how_to_activate">How to Activate</string>
    <string name="backup_locally">Backup Locally</string>
    <string name="backup_online">Backup Online</string>
    <string name="restore_data">Restore Data</string>
    <string name="edit_qty_text">Stock Count</string>
    <string name="edit_selling_price_text">Selling Price</string>
    <string name="edit_buying_price_hint">Buying Price</string>
    <string name="edit_item_name">Item Name</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="low_stock_numbers">Low Stock</string>
    <string name="not_added_to_list">Item Not added Make sure all fields have values</string>
</resources>