<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mich01.hustlepos.UI.Setup.BackupRestore">

  <TextView
      android:id="@+id/text_info_status"
      android:layout_width="408dp"
      android:layout_height="60dp"
      android:layout_marginTop="44dp"
      android:inputType="textMultiLine|textImeMultiLine"
      android:text="Backup and upload"
      android:textAlignment="center"
      android:textSize="25sp"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout_editor_absoluteX="1dp" />

  <ProgressBar
      android:id="@+id/upload_progress"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="match_parent"
      android:layout_height="28dp"
      app:layout_constraintTop_toBottomOf="@+id/text_info_status"
      tools:layout_editor_absoluteX="2dp" />

  <TextView
    android:id="@+id/progress_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/upload_progress" />

  <Button
      android:id="@+id/cmd_local_backup"
      android:layout_width="354dp"
      android:layout_height="112dp"
      android:layout_marginTop="32dp"
      android:text="@string/backup_locally"
      android:background="@drawable/alert_dialog_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progress_value" />

  <Button
      android:id="@+id/cmd_remote_backup"
      android:layout_width="354dp"
      android:layout_height="112dp"
      android:layout_marginTop="36dp"
      android:text="@string/backup_online"
      android:background="@drawable/alert_dialog_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.508"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cmd_local_backup" />

  <Button
      android:id="@+id/cmd_restore_db"
      android:layout_width="354dp"
      android:layout_height="112dp"
      android:layout_marginTop="32dp"
      android:text="@string/restore_data"
      android:background="@drawable/alert_dialog_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.508"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cmd_remote_backup" />

</androidx.constraintlayout.widget.ConstraintLayout>